fixed tag wrap in contacts page

--- a/src/pages/contacts/ContactsPage.module.scss
+++ b/src/pages/contacts/ContactsPage.module.scss
@@ -1050,17 +1050,8 @@ table {
 .tagBadgeDot {
   display: flex;
   justify-content: center;
-  vertical-align: middle;
-  color: #969696;
-  border: 1px solid #717171;
-  border-radius: 4px;
-  color: #434A51;
-  margin: 2px;
-  font-size: 24px;
-  min-height: 20px;
-  max-width: 39px;
   align-items: center;
-  padding-bottom: 2px;
+  min-width: 30px;
 }
 
 .footerContainer {
